--- a/that_was_easy/style.css
+++ b/that_was_easy/style.css
@@ -1,4 +1,9 @@
 #easy {
+    display:block;
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin:-150px 0px 0px -150px;
     width:300px;
     height:300px;
     border-radius: 150px;
@@ -6,5 +11,5 @@
     background-color: red;
     font-size:50px;
     color:white;
-    margin:auto;
+   
 }
