--- a/that_was_easy/style.css
+++ b/that_was_easy/style.css
@@ -1,15 +1,25 @@
+body{
+    position:relative;
+}
+
 #easy {
     display:block;
+    height:300px;
     position:absolute;
     top:50%;
     left:50%;
     margin:-150px 0px 0px -150px;
     width:300px;
-    height:300px;
     border-radius: 150px;
     border-color:black;
     background-color: red;
     font-size:50px;
     color:white;
-   
+}
+
+#easy:hover {
+    cursor:hand;
+    transform:scale(1.1);
+    transition:0.2s;
+    background-color:rgb(179,0,0);
 }
