--- a/that_was_easy/style.css
+++ b/that_was_easy/style.css
@@ -10,8 +10,8 @@ body{
     left:50%;
     margin:-150px 0px 0px -150px;
     width:300px;
+    border: 5px solid red;
     border-radius: 150px;
-    border-color:black;
     background-color: red;
     font-size:50px;
     color:white;
