--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,51 @@
-/**
- * Need to do a CSS Reset
- * */
- html, body, div, span, applet, object, iframe,
- h1, h2, h3, h4, h5, h6, p, blockquote, pre,
- a, abbr, acronym, address, big, cite, code,
- del, dfn, em, img, ins, kbd, q, s, samp,
- small, strike, strong, sub, sup, tt, var,
- b, u, i, center,
- dl, dt, dd, ol, ul, li,
- fieldset, form, label, legend,
- table, caption, tbody, tfoot, thead, tr, th, td,
- article, aside, canvas, details, embed, 
- figure, figcaption, footer, header, hgroup, 
- menu, nav, output, ruby, section, summary,
- time, mark, audio, video {
-     margin: 0;
-     padding: 0;
-     border: 0;
-     font-size: 100%;
-     font: inherit;
-     vertical-align: baseline;
- }
- /* HTML5 display-role reset for older browsers */
- article, aside, details, figcaption, figure, 
- footer, header, hgroup, menu, nav, section {
-     display: block;
- }
- body {
-     line-height: 1;
- }
- ol, ul {
-     list-style: none;
- }
- blockquote, q {
-     quotes: none;
- }
- blockquote:before, blockquote:after,
- q:before, q:after {
-     content: '';
-     content: none;
- }
- table {
-     border-collapse: collapse;
-     border-spacing: 0;
- }
 
-
-
-img {
-    width: 200px;
-    height: 200px;
-    margin:auto;
-    border: 1px red solid; 
+h1, h2, h3 {
+    text-align:left;
 }
+
+body {
+    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin:0px;
+}
+
+p {
+    text-align:left;
+}
+
 
 #main {
     margin-left:20%;
     margin-right:20%;
-    text-align:center;
-    border: 1px solid black;
+    text-align:left;
 }
 
-#projects{
-    display: grid; 
+nav {
+    width:100%;
+    height:50px;
+    background-color:red;
+}
+
+nav > p {
+    margin-top:0px;
+}
+
+#nav-links > a {
+    text-decoration:none;
+}
+
+.post {
+    width: 100%;
+    height: 50px;
+    background-color:#E5E5E5;
+    margin-bottom: 5px;
+    display: flex;
+}
+
+.post-left {
+    vertical-align:middle;
+    height:100%;
+}
+
+.post-left > h2 {
+    line-height:50px;
 }
