--- a/views/index.html
+++ b/views/index.html
@@ -25,8 +25,12 @@
                     <h2>Blog Title</h2>
                 </div>
                 <div class="post-right">
-                    <div class="tags"></div>
-                    <p class="date"></p>
+                    <div class="tags">
+                        <p>Game</p>
+                        <p>Web</p>
+                        <p>Lua</p>
+                    </div>
+                    <p class="date">3/25/2020</p>
                 </div> 
             </div>
             <div class="post"></div>
