--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,30 @@
 body {
     margin:0px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    display:flex;
+    flex-direction:column;
+    min-height:100vh;
+    font-size:1em;
+}
+
+h1 {
+    font-size:2em;
+    line-height:1.2em;
+    font-weight: 700;
+}
+
+h2 {
+    font-size:1.5em;
+    line-height: 1.2em;
+    font-weight: 600;
+}
+
+code {
+    color:#eb5757;
+    background-color:rgba(135, 131, 120, 0.15);
+}
+
+a {
+    text-decoration: underline;
+    color:inherit;
 }
