--- a/src/styles/blog-link.css
+++ b/src/styles/blog-link.css
@@ -14,28 +14,24 @@
     width: 50%;
 }
 
-.left-post > p:hover {
-    cursor:pointer;
-}
-
 .right-post {
     display:flex;
     width: 50%;
     flex-direction: row;
-    justify-content:end;
+    justify-content:flex-end;
 }
 
 .tags {
-    width: 80%;
+    width: 75%;
     display: flex;
     align-items:end;
     flex-direction: row;
-    justify-content:end;
+    justify-content:flex-end;
 }
 
 .post-date {
     color: #888888;
-    width: 20%;
+    width: 25%;
     text-align:right;
 }
 
@@ -45,7 +41,7 @@
     padding-right:5px;
     padding-left:5px;
     text-align:center;
-    background-color:lightgreen;
+/*    background-color:lightgreen; */
     border-radius:5px;
     height:80%;
 }
