--- a/src/styles/blog-link.module.css
+++ b/src/styles/blog-link.module.css
@@ -10,11 +10,11 @@
     line-height:1.5em;
 }
 
-.left-post {
+.leftPost {
     width: 50%;
 }
 
-.right-post {
+.rightPost {
     display:flex;
     width: 50%;
     flex-direction: row;
@@ -24,12 +24,12 @@
 .tags {
     width: 75%;
     display: flex;
-    align-items:end;
+    align-items:flex-end;
     flex-direction: row;
     justify-content:flex-end;
 }
 
-.post-date {
+.postDate {
     color: #888888;
     width: 25%;
     text-align:right;
