--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,12 +1,12 @@
-#main  {
+.main  {
     margin-left: auto;
     margin-right: auto;
-    width: 900px;
+    width: 800px;
     flex-grow: 1;
 }
 
 @media only screen and (min-width:1024px) {
-    #main {
+    .main {
         font-size:120%;
     }
 }
