--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,7 +1,8 @@
 .main {
-    width: 900px;
+    max-width: 900px;
     margin-left:auto;
     margin-right:auto;
+    flex-grow:1;
 }
 
 .contactCard {
@@ -37,5 +38,12 @@
 @media only screen and (min-width:1024px) {
     .main {
         font-size:120%;
+    }
+}
+
+@media only screen and (max-width:900px) {
+    .main {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
