--- a/src/styles/blog-link.module.css
+++ b/src/styles/blog-link.module.css
@@ -11,12 +11,12 @@
 }
 
 .leftPost {
-    width: 50%;
+    width: 70%;
 }
 
 .rightPost {
     display:flex;
-    width: 50%;
+    width: 30%;
     flex-direction: row;
     justify-content:flex-end;
 }
@@ -27,6 +27,7 @@
     align-items:flex-end;
     flex-direction: row;
     justify-content:flex-end;
+    margin-right:5px;
 }
 
 .postDate {
