--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,30 +1,16 @@
 .nav {
-    height:35px;
+    height:45px;
     display:flex;
     flex-direction:row;
     align-items:center;
+    justify-content: center;
     font-size:1.2em;
+    width: 900px;
+    margin:auto;
+    text-align:center;
 }
 
-.navLeft {
-    display:flex;
-    width:50%;
-    justify-content:row;
-}
-
-.navLeft > a {
-    padding-left:5%;
-    white-space:nowrap;
-}
-
-.navRight {
-    display:flex;
-    width:50%;
-    justify-content:flex-end;
-    padding-right:25px;
-}
-
-.navRight > a {
-    padding-left:5px;
-    padding-right:5px;
+.nav > a {
+    padding-left: 10px;
+    padding-right:10px;
 }
