--- a/src/styles/blog-link.module.css
+++ b/src/styles/blog-link.module.css
@@ -1,7 +1,15 @@
 .post {
     display:flex;
     flex-direction:row;
+    align-items:center;
     width:100%;
+    padding:4px 4px 4px 0px;
+}
+
+.post:hover {
+    cursor:pointer;
+    transition:0.2s;
+    background-color:#EEEEEE;
 }
 
 .post p {
@@ -21,33 +29,11 @@
     justify-content:flex-end;
 }
 
-.tags {
-    width: 79%;
-    display: flex;
-    align-items:flex-end;
-    flex-direction: row;
-    justify-content:flex-end;
-    margin-right:5px;
-}
-
 .postDate {
     color: #888888;
     width: 21%;
     text-align:right;
 }
 
-.tag {
-    font-size:80%;
-    margin-left:10px;
-    padding-right:5px;
-    padding-left:5px;
-    text-align:center;
-/*    background-color:lightgreen; */
-    border-radius:5px;
-    height:80%;
-}
 
-.tag:hover {
-    cursor:pointer;
-}
 
