--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,11 +1,11 @@
 .nav {
-    height:45px;
+    height:50px;
     display:flex;
     flex-direction:row;
-    align-items:center;
+    align-items:flex-end;
     justify-content: center;
     font-size:1.2em;
-    width: 900px;
+    width: 650px;
     margin:auto;
     text-align:center;
 }
