--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -1,7 +1,18 @@
 .main {
-    width:900px;
+    width:700px;
     margin-left:auto;
     margin-right:auto;
+}
+
+.date {
+    display:inline-block;
+}
+
+.info {
+    display:flex;
+    flex-direction:row;
+    height: 30px;
+    align-items:center;
 }
 
 p { 
